Don't build tests for running and analyzing

--- a/Haneke.xcodeproj/xcshareddata/xcschemes/Haneke.xcscheme
+++ b/Haneke.xcodeproj/xcshareddata/xcschemes/Haneke.xcscheme
@@ -22,10 +22,10 @@
          </BuildActionEntry>
          <BuildActionEntry
             buildForTesting = "YES"
-            buildForRunning = "YES"
+            buildForRunning = "NO"
             buildForProfiling = "NO"
             buildForArchiving = "NO"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "A095C9601980418C00CD0F4C"
