--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 osx_image: xcode7.2
 xcode_project: Haneke.xcodeproj
 xcode_scheme: Haneke
+xcode_sdk: iphonesimulator9.2
 branches:
   only:
     - master
