--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 osx_image: xcode7.2
-xcode_project: Haneke.xcodeproj
+xcode_workspace: Haneke.xcworkspace
 xcode_scheme: Haneke
 xcode_sdk: iphonesimulator9.2
 branches:
