--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ osx_image: xcode7.2
 xcode_workspace: Haneke.xcworkspace
 xcode_scheme: Haneke
 xcode_sdk: iphonesimulator9.2
+before_install:
+- brew update
+- brew install carthage || brew outdated carthage || brew upgrade carthage
+install:
+- carthage bootstrap
 branches:
   only:
     - master
