--- a/Haneke.xcodeproj/xcshareddata/xcschemes/Haneke-tvOS.xcscheme
+++ b/Haneke.xcodeproj/xcshareddata/xcschemes/Haneke-tvOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,23 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A095C9551980418C00CD0F4C"
-               BuildableName = "Haneke.framework"
-               BlueprintName = "Haneke-iOS"
-               ReferencedContainer = "container:Haneke.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "NO"
-            buildForProfiling = "NO"
-            buildForArchiving = "NO"
-            buildForAnalyzing = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A095C9601980418C00CD0F4C"
-               BuildableName = "HanekeTests.xctest"
-               BlueprintName = "HanekeTests"
+               BlueprintIdentifier = "6393C5DA1C3B229200EB1FD8"
+               BuildableName = "Haneke-tvOS.framework"
+               BlueprintName = "Haneke-tvOS"
                ReferencedContainer = "container:Haneke.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -40,36 +26,16 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "A095C9601980418C00CD0F4C"
-               BuildableName = "HanekeTests.xctest"
-               BlueprintName = "HanekeTests"
-               ReferencedContainer = "container:Haneke.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A095C9551980418C00CD0F4C"
-            BuildableName = "Haneke.framework"
-            BlueprintName = "Haneke-iOS"
-            ReferencedContainer = "container:Haneke.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = ""
-      selectedLauncherIdentifier = "Xcode.IDEFoundation.Launcher.PosixSpawn"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -79,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A095C9551980418C00CD0F4C"
-            BuildableName = "Haneke.framework"
-            BlueprintName = "Haneke-iOS"
+            BlueprintIdentifier = "6393C5DA1C3B229200EB1FD8"
+            BuildableName = "Haneke-tvOS.framework"
+            BlueprintName = "Haneke-tvOS"
             ReferencedContainer = "container:Haneke.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -97,9 +63,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "A095C9551980418C00CD0F4C"
-            BuildableName = "Haneke.framework"
-            BlueprintName = "Haneke-iOS"
+            BlueprintIdentifier = "6393C5DA1C3B229200EB1FD8"
+            BuildableName = "Haneke-tvOS.framework"
+            BlueprintName = "Haneke-tvOS"
             ReferencedContainer = "container:Haneke.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
