--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: objective-c
 osx_image: xcode7.2
 xcode_workspace: Haneke.xcworkspace
-xcode_scheme: Haneke
+xcode_scheme: Haneke-iOS
 xcode_sdk: iphonesimulator9.2
 before_install:
 - brew update
