--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ branches:
     - master
     - 
 script:
-  - set -o pipefail && xcodebuild -workspace Haneke.xcworkspace -scheme Haneke-iOS -sdk iphonesimulator10.0 build test | xcpretty --color
+  - set -o pipefail && xcodebuild -workspace Haneke.xcworkspace -scheme Haneke-iOS -destination 'platform=iOS Simulator,name=iPhone 6,OS=9.3' build test | xcpretty --color
