--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ branches:
     - master
     - feature/swift-3
 script:
-  - set -o pipefail && xcodebuild -workspace Haneke.xcworkspace -scheme Haneke-iOS -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7 Plus,OS=10.3' build test | xcpretty --color
+  - set -o pipefail && xcodebuild -workspace Haneke.xcworkspace -scheme Haneke-iOS -sdk iphonesimulator10.3 -destination 'platform=iOS Simulator,name=iPhone 7 Plus,OS=10.3' build test CODE_SIGNING_REQUIRED=NO | xcpretty --color
